Creado mediante Colaboratory

--- a/tarea_de_scraping.ipynb
+++ b/tarea_de_scraping.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPQx48fW1x0pJMmiL6A/lV/",
+      "authorship_tag": "ABX9TyO6ldn9KO5K5Bkx/zehSd/B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,58 +39,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "NLbsfcAZa4Aj"
-      },
-      "outputs": [],
-      "source": [
-        "\n",
-        "from bs4 import BeautifulSoup\n",
-        "import requests\n",
-        "import csv\n",
-        "from datetime import datetime\n",
-        "\n",
-        "url_page='https://www.bolsamadrid.es/esp/aspx/Indices/Resumen.aspx'\n",
-        "page=requests.get(url_page).text\n",
-        "soup=BeautifulSoup(page,\"lxml\")\n",
-        "\n",
-        "tabla=soup.find('table',attrs={'id':'ctl00_Contenido_tblÍndices'})\n",
-        "\n",
-        "price=\"\"\n",
-        "nroFila=0\n",
-        "for fila in tabla.find_all(\"tr\"):  # <td class=\"DifFlSb\" align=\"left\">IBEX 35&#174;</td><td>7.916,80</td><td>8.033,10</td><td ...\n",
-        "  if nroFila>=0:\n",
-        "    nro_Celda=0\n",
-        "    for celda in fila.find_all(\"td\"):\n",
-        "      if nro_Celda==0:\n",
-        "        name=celda.text\n",
-        "        print(\"Indice :\", name)\n",
-        "      if nro_Celda==6:\n",
-        "        fecha=celda.text\n",
-        "        print(\"Fecha :\",fecha)\n",
-        "      nro_Celda=nro_Celda+1\n",
-        "  nroFila=nroFila+1\n",
-        "  #with open('bolsa_valor.csv','a') as csv_file:\n",
-        "    #writer=csv.writer(csv_file)\n",
-        "    #writer.writerow([name, fecha, datetime.now()])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "with open('bolsa_valor.csv','a') as csv_file:\n",
-        "  writer=csv.writer(csv_file)\n",
-        "  writer.writerow([name, fecha, datetime.now()])"
-      ],
-      "metadata": {
-        "id": "b8mxPwOybuBY"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "\n",
         "from bs4 import BeautifulSoup\n",
@@ -107,54 +55,13 @@
       "metadata": {
         "id": "SpI-BXkYpTok"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "nroFila=0\n",
-        "for fila in tabla.find_all(\"tr\"):  \n",
-        "  if nroFila<=4:\n",
-        "    nro_Celda=0\n",
-        "    for celda in fila.find_all(\"td\"):\n",
-        "      if nro_Celda==0:\n",
-        "        name=celda.text \n",
-        "        #print(\"Nombres :\", name)\n",
-        "        open('busqueda.csv','a') as csv_file:\n",
-        "        writer=csv.writer(csv_file)\n",
-        "        writer.writerow([name, price, datetime.now()]) \n",
-        "        enlace=celda.find('a')\n",
-        "      nro_Celda=nro_Celda+1\n",
-        "  nroFila=nroFila+1\n",
-        " \n",
-        "  \n",
-        " "
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 131
-        },
-        "id": "7E6QjfdOpXrO",
-        "outputId": "cce5af62-414d-4c76-b37a-ea014daec120"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-57-890312d2ae2e>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    open('busqueda.csv','a') as csv_file:\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "lista=[]\n",
+        "lista=['Nombre',]\n",
         "nroFila=0\n",
         "for fila in tabla.find_all(\"tr\"):  \n",
         "  if nroFila <=4:\n",
@@ -165,21 +72,21 @@
         "        lista.append (name)\n",
         "        enlace=celda.find('a')\n",
         "      nro_Celda=nro_Celda+1\n",
-        "  nroFila=nroFila+1\n",
-        "  \n"
+        "  nroFila=nroFila+1\n"
       ],
       "metadata": {
         "id": "7rM-3eltFZK8"
       },
-      "execution_count": 124,
+      "execution_count": 39,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "with open('tarea_scarping.csv','w',newline='\\n') as archivo:\n",
+        "with open('tarea_scarping.csv','w') as archivo:\n",
         "    writer=csv.writer(archivo)\n",
-        "    writer.writerow(lista)\n",
+        "    for x in lista :\n",
+        "      writer.writerow([x])    \n",
         "print(\"CSV Creado completo\")"
       ],
       "metadata": {
@@ -187,9 +94,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ad5656d0-a5e4-4b18-dfc6-c32373681f77"
+        "outputId": "41078f09-ff4c-44bb-8e1c-5c0d1aeb9e97"
       },
-      "execution_count": 138,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
