Creado mediante Colaboratory

--- a/tareaDataframe.ipynb
+++ b/tareaDataframe.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNUKYn+yZ9Ri5UFicoeYZ2w",
+      "authorship_tag": "ABX9TyPtTtx1Lfzd3FUBcs5WgBk4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,14 +29,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 488
         },
         "id": "qE8CIuSOT0n4",
-        "outputId": "fcdabdf2-c856-46b9-c31d-d4f265a67f5b"
+        "outputId": "8deb8a74-82c2-4ce5-9c25-a105a623d334"
       },
       "outputs": [
         {
@@ -61,7 +61,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8dce2438-e4a0-4187-b0ac-b459328b589a\">\n",
+              "  <div id=\"df-84cf6ded-da81-4030-b6b4-f1877627e496\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -219,7 +219,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8dce2438-e4a0-4187-b0ac-b459328b589a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-84cf6ded-da81-4030-b6b4-f1877627e496')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -270,12 +270,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-8dce2438-e4a0-4187-b0ac-b459328b589a button.colab-df-convert');\n",
+              "          document.querySelector('#df-84cf6ded-da81-4030-b6b4-f1877627e496 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8dce2438-e4a0-4187-b0ac-b459328b589a');\n",
+              "          const element = document.querySelector('#df-84cf6ded-da81-4030-b6b4-f1877627e496');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -298,7 +298,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 90
+          "execution_count": 2
         }
       ],
       "source": [
@@ -312,7 +312,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df1=df0.fillna(50)\n",
+        "df1=df0.fillna(20)\n",
         "df1['IMC']=df1['peso']/df1['altura']*df1['altura']\n",
         "df1.IMC = pd.to_numeric(df1.IMC, downcast='integer')\n",
         "df1"
@@ -323,9 +323,9 @@
           "height": 488
         },
         "id": "DcSH_AtLEaKu",
-        "outputId": "8b88cef3-8416-437b-aae6-5d111738f480"
+        "outputId": "58e7a185-a2b8-465d-e345-7e9332c0dd5f"
       },
-      "execution_count": 144,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -334,12 +334,12 @@
               "                             nombre  edad sexo   peso  altura  colesterol  IMC\n",
               "0      José Luis Martínez Izquierdo    18    H   85.0    1.79       182.0   85\n",
               "1                    Rosa Díaz Díaz    32    M   65.0    1.73       232.0   65\n",
-              "2             Javier García Sánchez    24    H   50.0    1.81       191.0   50\n",
+              "2             Javier García Sánchez    24    H   20.0    1.81       191.0   20\n",
               "3               Carmen López Pinzón    35    M   65.0    1.70       200.0   65\n",
               "4              Marisa López Collado    46    M   51.0    1.58       148.0   51\n",
               "5                 Antonio Ruiz Cruz    68    H   66.0    1.74       249.0   66\n",
               "6           Antonio Fernández Ocaña    51    H   62.0    1.72       276.0   62\n",
-              "7             Pilar Martín González    22    M   60.0    1.66        50.0   60\n",
+              "7             Pilar Martín González    22    M   60.0    1.66        20.0   60\n",
               "8              Pedro Gálvez Tenorio    35    H   90.0    1.94       241.0   90\n",
               "9           Santiago Reillo Manzano    46    H   75.0    1.85       280.0   75\n",
               "10            Macarena Álvarez Luna    53    M   55.0    1.62       262.0   55\n",
@@ -349,7 +349,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2e4d35be-e29b-4fa2-aaa6-24daf535df54\">\n",
+              "  <div id=\"df-d0aa5628-d6d7-4009-aa22-bb7ad10ace8c\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -404,10 +404,10 @@
               "      <td>Javier García Sánchez</td>\n",
               "      <td>24</td>\n",
               "      <td>H</td>\n",
-              "      <td>50.0</td>\n",
+              "      <td>20.0</td>\n",
               "      <td>1.81</td>\n",
               "      <td>191.0</td>\n",
-              "      <td>50</td>\n",
+              "      <td>20</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -456,7 +456,7 @@
               "      <td>M</td>\n",
               "      <td>60.0</td>\n",
               "      <td>1.66</td>\n",
-              "      <td>50.0</td>\n",
+              "      <td>20.0</td>\n",
               "      <td>60</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -522,7 +522,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2e4d35be-e29b-4fa2-aaa6-24daf535df54')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d0aa5628-d6d7-4009-aa22-bb7ad10ace8c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -573,12 +573,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-2e4d35be-e29b-4fa2-aaa6-24daf535df54 button.colab-df-convert');\n",
+              "          document.querySelector('#df-d0aa5628-d6d7-4009-aa22-bb7ad10ace8c button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-2e4d35be-e29b-4fa2-aaa6-24daf535df54');\n",
+              "          const element = document.querySelector('#df-d0aa5628-d6d7-4009-aa22-bb7ad10ace8c');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -601,7 +601,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 144
+          "execution_count": 9
         }
       ]
     },
@@ -627,7 +627,7 @@
       "cell_type": "code",
       "source": [
         " df2=df1\n",
-        "condiciones=[ (df2['IMC']<=20),(df2['IMC'] >20) & (df3['IMC'] <=25),(df2['IMC'] >25)]\n",
+        "condiciones=[ (df2['IMC']<=20),(df2['IMC'] >20) & (df2['IMC'] <=25),(df2['IMC'] >25)]\n",
         "opciones=['Delgado','Normal','Sobre Peso']\n",
         "df2['Campo Estado']=np.select(condiciones,opciones)\n",
         "df2.sort_values('IMC')\n"
@@ -638,19 +638,19 @@
           "height": 488
         },
         "id": "EJGyHDIgtW6b",
-        "outputId": "db21d55a-8913-49f9-b229-943b0689bcde"
+        "outputId": "ca9dc07e-b784-45b1-bfa7-87be0947e097"
       },
-      "execution_count": 145,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "                             nombre  edad sexo   peso  altura  colesterol  \\\n",
-              "2             Javier García Sánchez    24    H   50.0    1.81       191.0   \n",
+              "2             Javier García Sánchez    24    H   20.0    1.81       191.0   \n",
               "4              Marisa López Collado    46    M   51.0    1.58       148.0   \n",
               "10            Macarena Álvarez Luna    53    M   55.0    1.62       262.0   \n",
-              "7             Pilar Martín González    22    M   60.0    1.66        50.0   \n",
+              "7             Pilar Martín González    22    M   60.0    1.66        20.0   \n",
               "13            Carolina Rubio Moreno    20    M   61.0    1.77       194.0   \n",
               "6           Antonio Fernández Ocaña    51    H   62.0    1.72       276.0   \n",
               "1                    Rosa Díaz Díaz    32    M   65.0    1.73       232.0   \n",
@@ -663,7 +663,7 @@
               "12  Miguel Angel Cuadrado Gutiérrez    27    H  109.0    1.98       210.0   \n",
               "\n",
               "    IMC Campo Estado  \n",
-              "2    50   Sobre Peso  \n",
+              "2    20      Delgado  \n",
               "4    51   Sobre Peso  \n",
               "10   55   Sobre Peso  \n",
               "7    60   Sobre Peso  \n",
@@ -680,7 +680,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c56d91d2-00b4-49ee-b10b-f4bfddd8edcb\">\n",
+              "  <div id=\"df-99d8a1b4-e085-427e-86f0-433cacf4d84d\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -716,11 +716,11 @@
               "      <td>Javier García Sánchez</td>\n",
               "      <td>24</td>\n",
               "      <td>H</td>\n",
-              "      <td>50.0</td>\n",
+              "      <td>20.0</td>\n",
               "      <td>1.81</td>\n",
               "      <td>191.0</td>\n",
-              "      <td>50</td>\n",
-              "      <td>Sobre Peso</td>\n",
+              "      <td>20</td>\n",
+              "      <td>Delgado</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -751,7 +751,7 @@
               "      <td>M</td>\n",
               "      <td>60.0</td>\n",
               "      <td>1.66</td>\n",
-              "      <td>50.0</td>\n",
+              "      <td>20.0</td>\n",
               "      <td>60</td>\n",
               "      <td>Sobre Peso</td>\n",
               "    </tr>\n",
@@ -868,7 +868,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c56d91d2-00b4-49ee-b10b-f4bfddd8edcb')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-99d8a1b4-e085-427e-86f0-433cacf4d84d')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -919,12 +919,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c56d91d2-00b4-49ee-b10b-f4bfddd8edcb button.colab-df-convert');\n",
+              "          document.querySelector('#df-99d8a1b4-e085-427e-86f0-433cacf4d84d button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c56d91d2-00b4-49ee-b10b-f4bfddd8edcb');\n",
+              "          const element = document.querySelector('#df-99d8a1b4-e085-427e-86f0-433cacf4d84d');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -947,7 +947,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 145
+          "execution_count": 10
         }
       ]
     },
@@ -964,7 +964,7 @@
         "id": "c4fsEnhtIswE",
         "outputId": "a007986b-814e-4556-9b80-74168ea01952"
       },
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
